# fast-marketplace-app

./: .gitignore  Cargo.toml  install-linux.sh  install-mac.sh
.github/workflows/: release.yml
src/: lib.rs  main.rs  updater.rs
src/application/: error.rs
src/application/tests/services/: property.rs  vehicle.rs
src/application/tests/services/webscraping/: marketplace.rs
src/application/usecases/: add_property.rs  add_vehicle.rs  mod.rs
src/domain/entities/: item.rs  mod.rs  vehicle.rs
src/domain/entities/models/: mod.rs
src/domain/entities/models/item/: availability.rs  category.rs  condition.rs  meeting.rs  mod.rs
src/domain/entities/models/property/: category.rs  model.rs
src/domain/entities/models/vehicle/: bodystyle.rs  category.rs  condition.rs  fuel.rs  manufacturer.rs
src/domain/services/: error.rs  mod.rs
src/domain/services/webscraping/: marketplace.rs
src/infra/: mod.rs
src/infra/http/: routes.rs  setup.rs
src/infra/http/dtos/: add_property.rs  add_vehicle.rs  auth_marketplace.rs
src/infra/http/handlers/: add_property.rs  add_vehicle.rs  auth_marketplace.rs  get_marketplace.rs  mod.rs  signin_marketplace.rs  signout_marketplace.rs
src/infra/repositories/: image.rs
src/infra/services/: mod.rs  property.rs  vehicle.rs
src/infra/services/webscraping/: marketplace.rs
