[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }

url = "2"
sysuri = "0.4.0"
chromiumoxide = "0.9.1"
futures = "0.3.32"

dirs = "5"

axum = "0.7"

tower-http = { version = "0.5", features = ["cors"] }
